[gd_scene load_steps=2 format=3 uid="uid://behhvscdbwvm8"]

[ext_resource type="Script" uid="uid://crnmwtt0p4tyl" path="res://scripts/ui/LevelButton.gd" id="1_clf8o"]

[node name="LevelButton" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_clf8o")

[node name="SelectButton" type="Button" parent="."]
layout_mode = 2
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="LevelTitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LevelImage" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 48)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
